--- a/CSS/style.css
+++ b/CSS/style.css
@@ -202,7 +202,7 @@ section {
     display: flex;
     align-items: flex-end; /* Aligns items at the bottom */
     padding: 4rem; /* Adds padding to the container */
-    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../image/background.jpg);
+    background: var(--primary);
     background-size: cover;
     background-position: center;
 }
@@ -356,7 +356,7 @@ section.services .card-wrapper .card{
     padding-top: 5rem;
     text-align: center;
     transition: all .3s ease;
-    margin: 0 0rem;
+    margin: 0 1rem;
 }
 section.services .card-wrapper .card img{
     position: absolute;
@@ -723,7 +723,7 @@ section.contact .btn-wrapper{
         width: 300px;
     }
     .home .content{
-        margin-bottom: 3rem;
+        margin-bottom: 10rem;
     }
     .home .content p{
         margin-bottom: 3rem;
@@ -755,7 +755,7 @@ footer{
     flex-flow: row wrap;
     padding: 50px;
     color: #fff;
-    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../image/background.jpg);
+    background: var(--primary);
     background-size: cover;
     display: flex;
     flex-direction:row;
@@ -783,8 +783,13 @@ h2{
     list-style:none;
     padding-left:0;
 }
+
+.footer p{
+    font-size: 1.2rem;
+}
 .footer li{
     line-height:2em;
+    font-size: 1.2rem;
 }
 .footer a{
     text-decoration: none;
@@ -802,7 +807,7 @@ h2{
     margin-right: 1.25em;
 }
 .box a{
-    color: var(--gwhite);
+    color: var(--gray);
 }
 .footer-bottom{
     text-align:center;
@@ -813,7 +818,7 @@ padding-top: 50px;
 .footer-left p{
     padding-right: 20%;
     margin-top: 2rem;
-    color: var(--gwhite);
+    color: var(--gray);
 }
 .footer .social{
     display: flex;
